@@ -55,6 +55,7 @@ MovieJukebox 1.0.18 beta
   - Enhancement  #971 Display how long YAMJ took to process
   - Enhancement  #973 Re-write of the video image functionality to use local videoimage files
   - Fixed defect #974 Keyword missing for Trailer URL
+  - Fixed defect #979 Java Heap Space error when processing ISO files
 
 MovieJukebox 1.0.17 beta
 ------------------------
